# thesis-code

./: .gitignore  LICENSE  README.md  arena.ipynb  attack.py  attacktest.py  comparison.py  experiments.py  int-point-qp.ipynb  l-bfgs.ipynb  line-search-sqp.ipynb  optimus.py  pyproject.toml  requirements.txt  simple_attack.py  test_attack.py  test_optimus.py  tests.py  thesis-plots.py  utils.py
benchmarks/: plots.py
notebooks/: analysis.ipynb  arena.ipynb  figs.ipynb  int-point-qp.ipynb  line-search-sqp.ipynb
src/opt_attack/: attack.py  optimus.py  utils.py
tests/: benchmarkres.py  counters.py  test_attack.py  test_benchmark.py  test_optimus.py
