[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opt_attack"
version = "0.1.0"
dependencies = [
    "absl-py==2.1.0",
    "appnope==0.1.4",
    "asttokens==2.4.1",
    "astunparse==1.6.3",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "comm==0.2.2",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "debugpy==1.8.5",
    "decorator==5.1.1",
    "executing==2.0.1",
    "flatbuffers==24.3.25",
    "fonttools==4.53.1",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.65.4",
    "h5py==3.11.0",
    "idna==3.7",
    "ipykernel==6.29.5",
    "ipython==8.26.0",
    "jedi==0.19.1",
    "jupyter_client==8.6.2",
    "jupyter_core==5.7.2",
    "keras==3.4.1",
    "kiwisolver==1.4.5",
    "libclang==18.1.1",
    "Markdown==3.6",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "matplotlib==3.9.1.post1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "ml-dtypes==0.4.0",
    "namex==0.0.8",
    "nest-asyncio==1.6.0",
    "numpy==1.26.4",
    "opt-einsum==3.3.0",
    "optree==0.12.1",
    "packaging==24.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==10.4.0",
    "platformdirs==4.2.2",
    "prompt_toolkit==3.0.47",
    "protobuf==4.25.4",
    "psutil==6.0.0",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "Pygments==2.18.0",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==26.1.0",
    "requests==2.32.3",
    "rich==13.7.1",
    "scipy==1.14.0",
    "setuptools==72.1.0",
    "six==1.16.0",
    "stack-data==0.6.3",
    "tensorboard==2.17.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.17.0",
    "termcolor==2.4.0",
    "tornado==6.4.1",
    "traitlets==5.14.3",
    "typing_extensions==4.12.2",
    "urllib3==2.2.2",
    "wcwidth==0.2.13",
    "Werkzeug==3.0.3",
    "wheel==0.44.0",
    "wrapt==1.16.0"
]
